# BUAARobocon2026

./: README.md
example_py/: package.xml  setup.py
example_py/example_py/: ball_detector_node.py  ball_position_subscriber.py
sift_detector/: package.xml  setup.cfg  setup.py
sift_detector/config/: camera_params.yaml
sift_detector/sift_detector/: sift_detector_node.py
src/template_detection/: setup.py
src/template_detection/launch/: template_detector.launch.py
template_detection/: package.xml  setup.cfg
template_detection/config/: template_detector_params.yaml
template_detection/template_detection/: template_detector_node.py
